[Transition and animations] Finished animating the buttons and modal such that the sequence of z-index and opacity do not cause the overlap issue where button appears on top of the modal

--- a/Transitions and animations/8,9,10. Modal: Closing the modal/css/styles.css
+++ b/Transitions and animations/8,9,10. Modal: Closing the modal/css/styles.css
@@ -116,12 +116,15 @@ main {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition:
-    opacity ease-in 0.5s,
-    z-index ease-in 0.5s;
+    opacity linear 0.3s,
+    z-index linear 0.3s 0.1s;
 
   &.open-mode {
-    z-index: 0;
+    z-index: 1;
     opacity: 1;
+    transition:
+      opacity linear 0.3s 0.3s,
+      z-index linear 0.1s;
   }
 }
 
